crates/language-v2/tests/src/fail/p0_parsing/empty_string/test.stderr
error: Expected a non-empty string.
  --> src/fail/p0_parsing/empty_string/test.rs:14:76
   |
14 |             items = [Token(name = Bar, definitions = [TokenDefinition(Atom(""))])]
   |                                                                            ^^
